docs/api/qiskit/0.43/qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.mdx
---
title: CNOTUnitCircuit
description: API reference for qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit
---

# CNOTUnitCircuit

<Class id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/synthesis/aqc/cnot_unit_circuit.py" signature="CNOTUnitCircuit(num_qubits, cnots, tol=0.0, name=None)">
  Bases: [`ApproximateCircuit`](qiskit.transpiler.synthesis.aqc.ApproximateCircuit "qiskit.transpiler.synthesis.aqc.approximate.ApproximateCircuit")

  A class that represents an approximate circuit based on CNOT unit blocks.

  **Parameters**

  *   **num\_qubits** (*int*) – the number of qubits in this circuit.
  *   **cnots** ([*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")) – an array of dimensions `(2, L)` indicating where the CNOT units will be placed.
  *   **tol** (*float | None*) – angle parameter less or equal this (small) value is considered equal zero and corresponding gate is not inserted into the output circuit (because it becomes identity one in this case).
  *   **name** (*str | None*) – name of this circuit

  **Raises**

  **ValueError** – if an unsupported parameter is passed.

  ## Methods Defined Here

  <span id="qiskit-transpiler-synthesis-aqc-cnotunitcircuit-build" />

  ### build

  <Function id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.build" name="build" signature="CNOTUnitCircuit.build(thetas)">
    #### Constructs a Qiskit quantum circuit out of the parameters (angles) of this circuit. If a

    parameter value is less in absolute value than the specified tolerance then the corresponding rotation gate will be skipped in the circuit.
  </Function>

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.calibrations" name="calibrations">
    Return calibration dictionary.

    The custom pulse definition of a given gate is of the form `{'gate_name': {(qubits, params): schedule}}`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.data" name="data">
    Return the circuit data (instructions and context).

    **Returns**

    a list-like object containing the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction")s for each instruction.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.instances" name="instances" attributeValue="= 121" />

  ### layout

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.layout" name="layout">
    Return any associated layout information anout the circuit

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") function, an initial layout which permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.
  </Attribute>

  ### metadata

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.metadata" name="metadata">
    The user provided metadata associated with the circuit.

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.num_clbits" name="num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.num_parameters" name="num_parameters">
    The number of parameter objects in the circuit.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.num_qubits" name="num_qubits">
    Return number of qubits.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.op_start_times" name="op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    **AttributeError** – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.parameters" name="parameters">
    The parameters defined in the circuit.

    This attribute returns the [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit sorted alphabetically. Note that parameters instantiated with a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") are still sorted numerically.

    **Examples**

    The snippet below shows that insertion order of parameters does not matter.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> a, b, elephant = Parameter("a"), Parameter("b"), Parameter("elephant")
    >>> circuit = QuantumCircuit(1)
    >>> circuit.rx(b, 0)
    >>> circuit.rz(elephant, 0)
    >>> circuit.ry(a, 0)
    >>> circuit.parameters  # sorted alphabetically!
    ParameterView([Parameter(a), Parameter(b), Parameter(elephant)])
    ```

    Bear in mind that alphabetical sorting might be unituitive when it comes to numbers. The literal “10” comes before “2” in strict alphabetical sorting.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> angles = [Parameter("angle_1"), Parameter("angle_2"), Parameter("angle_10")]
    >>> circuit = QuantumCircuit(1)
    >>> circuit.u(*angles, 0)
    >>> circuit.draw()
       ┌─────────────────────────────┐
    q: ┤ U(angle_1,angle_2,angle_10) ├
       └─────────────────────────────┘
    >>> circuit.parameters
    ParameterView([Parameter(angle_1), Parameter(angle_10), Parameter(angle_2)])
    ```

    To respect numerical sorting, a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") can be used.

    ```python
    ```

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter, ParameterVector
    >>> x = ParameterVector("x", 12)
    >>> circuit = QuantumCircuit(1)
    >>> for x_i in x:
    ...     circuit.rx(x_i, 0)
    >>> circuit.parameters
    ParameterView([
        ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
        ParameterVectorElement(x[2]), ParameterVectorElement(x[3]),
        ..., ParameterVectorElement(x[11])
    ])
    ```

    **Returns**

    The sorted [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qubits

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>

  ### thetas

  <Attribute id="qiskit.transpiler.synthesis.aqc.CNOTUnitCircuit.thetas" name="thetas">
    Returns a vector of rotation angles used by CNOT units in this circuit.

    **Returns**

    Parameters of the rotation gates in this circuit.
  </Attribute>
</Class>

